test/error/uninitialized_vararray.imp
# Simple uninitialized vararray error test
# Vararray initialization should be checked per index
# This can be achieved only for static indexing
# Hence this is not implemented
PROGRAM IS
    a, b[5], sum
IN
    READ a;
    # READ b[0];
    sum := a + b[2];
    WRITE sum;
END
